<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/ic_login_bg">

         <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:src="@mipmap/ic_login_logo"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

         <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:cardCornerRadius="8dp"
            app:contentPadding="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_10sdp"
            app:cardElevation="6dp"
            app:cardMaxElevation="10dp"
            app:layout_constraintTop_toBottomOf="@+id/img_logo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

               <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_white"
                android:fillViewport="true">


               <LinearLayout
                android:id="@+id/textinput_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                    <com.app.perk99driver.custom.CustomTextViewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/app_black"
                    android:textSize="@dimen/_15ssp" />

                    <com.app.perk99driver.custom.CustomTextViewSemiBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="Insert your name ,email,address,password and mobile number to signup"
                    android:textColor="@color/app_black"
                    android:textSize="@dimen/_11ssp"
                    />


                   <RelativeLayout
                    android:id="@+id/rel_first"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_36sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/edt_txtbg"
                    >

                       <com.app.perk99driver.custom.CustomEditTextRegular
                        android:id="@+id/edt_fst_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="50"
                        android:gravity="center"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:hint="@string/first_name"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/_12ssp"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rel_last"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_36sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/edt_txtbg"
                    >

                  <com.app.perk99driver.custom.CustomEditTextRegular
                        android:id="@+id/edt_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:maxLength="50"
                        android:gravity="center"
                        android:hint="@string/last_name"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/_12ssp"/>

                </RelativeLayout>

                       <RelativeLayout
                        android:id="@+id/rel_email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/edt_txtbg"
                        >

                        <com.app.perk99driver.custom.CustomEditTextRegular
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:gravity="center"
                            android:hint="@string/email"
                            android:textColorHint="@color/hint_color"

                            android:textSize="@dimen/_12ssp" />


                    </RelativeLayout>


                   <RelativeLayout
                    android:id="@+id/rel_address"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_36sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/edt_txtbg"
                    >

                    <com.app.perk99driver.custom.CustomEditTextRegular
                        android:id="@+id/edtAddress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="50"
                        android:gravity="center"
                        android:hint="Address"
                        android:textColorHint="@color/hint_color"

                        android:textSize="@dimen/_12ssp" />
                </RelativeLayout>





                <RelativeLayout
                    android:id="@+id/rel_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_marginTop="@dimen/_10sdp"



                    >


                    <RelativeLayout
                        android:id="@+id/rel_phone_code"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_36sdp"
                        android:background="@drawable/edt_txtbg">


                        <com.hbb20.CountryCodePicker
                            android:id="@+id/cc"
                            app:ccp_defaultPhoneCode="91"
                            android:layout_width="wrap_content"
                            app:ccp_clickable="true"
                            app:ccp_showFlag="false"
                            android:gravity="center"
                            android:textSize="@dimen/_10ssp"
                            app:ccp_showNameCode="true"


                            android:visibility="visible"

                            android:layout_height="match_parent"
                            />



                    </RelativeLayout>





                    <RelativeLayout
                        android:id="@+id/rel_number"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_toRightOf="@+id/rel_phone_code"
                        android:background="@drawable/edt_txtbg"
                        >

                        <com.app.perk99driver.custom.CustomEditTextRegular
                            android:id="@+id/edt_number"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="14"
                            android:gravity="center"
                            android:hint="@string/mobile_number"
                            android:textColorHint="@color/hint_color"
                            android:textSize="@dimen/_12ssp" />
                    </RelativeLayout>
                </RelativeLayout>








                <RelativeLayout
                        android:id="@+id/relativeLayout_pass"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/edt_txtbg"
                  >

                        <com.app.perk99driver.custom.CustomEditTextRegular
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:maxLength="30"
                            android:gravity="center"
                            android:hint="@string/password"
                            android:textColorHint="@color/hint_color"

                            android:textSize="@dimen/_12ssp" />



                    </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp">

                       <com.app.perk99driver.custom.CustomButtonTextRegular
                        android:id="@+id/btnSignUp"
                        style="@style/app_button"
                        android:layout_centerHorizontal="true"
                        android:text="Sign Up"/>

                </RelativeLayout>

                <RelativeLayout
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp">

                   <View
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_toLeftOf="@+id/txt_or_sign"
                        android:background="@color/app_orange_light"
                        android:paddingTop="@dimen/_2sdp"/>


                    <com.app.perk99driver.custom.CustomTextViewRegular
                        android:id="@+id/txt_or_sign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="Or"
                        android:textColor="@color/txt_color"
                        android:textSize="@dimen/_12ssp"/>


                    <View
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_toRightOf="@+id/txt_or_sign"
                    android:background="@color/app_orange_light"
                    android:paddingTop="@dimen/_2sdp"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_google"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_google" />

                    <ImageView
                        android:id="@+id/img_fb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:src="@mipmap/ic_facebook" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:orientation="horizontal">

                    <com.app.perk99driver.custom.CustomTextViewRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Already have an account?"
                        android:textColor="@color/app_color"
                        android:textSize="@dimen/_12ssp" />

                    <com.app.perk99driver.custom.CustomTextViewRegular
                        android:id="@+id/txt_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="Login"
                        android:textColor="@color/app_orange"
                        android:textSize="@dimen/_12ssp"/>

                </LinearLayout>


            </LinearLayout>

            </ScrollView>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>