<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/ic_login_bg"
        tools:context=".ui.LoginActivity">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@mipmap/ic_login_logo"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"

            app:cardMaxElevation="10dp"
            app:contentPadding="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_logo">

            <LinearLayout
                android:id="@+id/textinput_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:textColor="@color/app_black"
                    android:textSize="@dimen/_15ssp" />

                <com.app.perk99driver.custom.CustomTextViewRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_gravity="center"
                    android:text="Insert your email and password to login"
                    android:textColor="@color/app_black"
                    android:textSize="@dimen/_11ssp" />




                <RelativeLayout
                    android:id="@+id/rel_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_36sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/edt_txtbg"
                    >

                    <com.app.perk99driver.custom.CustomEditTextRegular
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:hint="Email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/_13ssp" />
                </RelativeLayout>







                <RelativeLayout
                    android:id="@+id/relativeLayout_pass"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_36sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/edt_txtbg"
                    >

                    <com.app.perk99driver.custom.CustomEditTextRegular
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:hint="Password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/_13ssp" />


                </RelativeLayout>





                <com.app.perk99driver.custom.CustomTextViewRegular
                    android:id="@+id/txt_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/forgot_password"
                    android:textColor="@color/txt_color"
                    android:textSize="@dimen/_11ssp" />


                <RelativeLayout
                    android:id="@+id/rlButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp">

                    <com.app.perk99driver.custom.CustomButtonTextRegular
                        android:id="@+id/btnlogin"
                        style="@style/app_button"
                        android:layout_centerHorizontal="true"
                        android:text="@string/login" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp">

                    <View
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:visibility="gone"
                        android:layout_toLeftOf="@+id/txt_or_sign"
                        android:background="@color/app_orange_light"
                        android:paddingTop="@dimen/_2sdp"/>


                    <com.app.perk99driver.custom.CustomTextViewRegular
                        android:id="@+id/txt_or_sign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="Or"
                        android:visibility="gone"
                        android:textColor="@color/txt_color"
                        android:textSize="@dimen/_12ssp" />


                    <View
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:visibility="gone"
                        android:layout_toRightOf="@+id/txt_or_sign"
                        android:background="@color/app_orange_light"
                        android:paddingTop="@dimen/_2sdp"/>

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/img_google"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_google" />

                    <ImageView
                        android:id="@+id/img_fb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:src="@mipmap/ic_facebook" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:orientation="horizontal">

                    <com.app.perk99driver.custom.CustomTextViewRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/txt_color"
                        android:textSize="@dimen/_12ssp" />

                    <com.app.perk99driver.custom.CustomTextViewRegular
                        android:id="@+id/txt_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="Register now"
                        android:textColor="@color/app_orange"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>